# st125981_ML_A3

./: .env  .gitignore  Dockerfile  Fahad_st125981_ML_assignment_3.ipynb  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  test_model.py
,github/workflows/: ci-cd.yml
.github/workflows/: ci-cd.yml
app/: custom_models.py  main.py
